--- a/feature4.html
+++ b/feature4.html
@@ -11,6 +11,6 @@
   </style>
 </head>
 <body>
-<p class="p1">wefwef</p>
+<p class="p1">wefwef wef wsef<span class="Apple-converted-space"> </span></p>
 </body>
 </html>
